* Renamed local-settings.js to autoconfig.js, so it gets included earlier. * Set app.update.enabled to "false" to really disable auto-updates * Leave some options alone, as we don't need to change them any more:   browser.download.useDownloadDir   browser.download.useToolkitUI   browser.link.open_newwindow   browser.search.update   browser.tabs.closeButtons   dom.storage.enabled   layout.spellcheckDefault   layout.word_select.stop_at_punctuation   media.fragmented.*   media.mediasource.*   security.ssl3.dhe_rsa_aes_128_sha   security.ssl3.dhe_rsa_aes_256_sha   security.tls.version.min   security.tls.version.max
* Disable Firefox Pocket
* Disable Firefox Hello
* Lock down dom.event.clipboardevents.enabled
* Enable Tracking Protection in non-private mode too
* Move browser.urlbar.formatting.enabled and browser.urlbar.trimURLs to
  the end of the file, so that we can easily see if the file got parsed properly.

Signed-off-by: Christian Kujau <lists@nerdbynature.de>

 mozilla/autoconfig.js |  12 +++--
 mozilla/mozilla.cfg   | 127 ++++++++++++++++++++++++++++++++------------------
 2 files changed, 91 insertions(+), 48 deletions(-)

--- a/mozilla/mozilla.cfg
+++ b/mozilla/mozilla.cfg
@@ -1,15 +1,18 @@
 //
 // firefox.cfg
 //
+
+//
 // TODO:
-// * re-evaluate settings: are they still used & relevant?
-// * add more settings for better privacy-minded defaults
+// * (Regularly) re-evaluate settings: are they still relevant and supported?
+// * Add more settings for better privacy-minded defaults
 //
 
 // http://kb.mozillazine.org/App.update.auto
 //  true - Download and install updates automatically (default)
 // false - Ask the user what he wants to do when an update is available 
 lockPref("app.update.auto", false);
+lockPref("app.update.enabled", false);
 
 // http://kb.mozillazine.org/Browser.backspace_action
 // 0 - go back to previous page
@@ -45,13 +48,13 @@ lockPref("browser.cache.disk_cache_ssl", false);
 // http://kb.mozillazine.org/Unable_to_save_or_download_files
 //  true - Use browser.download.downloadDir (default)
 // false - Do not use browser.download.downloadDir
-defaultPref("browser.download.useDownloadDir", false);
+// pref("browser.download.useDownloadDir", false);
 
 // Find and manage downloaded files
 // https://support.mozilla.org/en-US/kb/find-and-manage-downloaded-files
 //  true - Use old download manager
 // false - Use new download manger (default)
-defaultPref("browser.download.useToolkitUI", true); 
+// pref("browser.download.useToolkitUI", true); 
 
 // http://kb.mozillazine.org/Location_Bar_search
 //  true - Add browser.fixup.alternate.prefix & browser.fixup.alternate.suffix
@@ -70,7 +73,7 @@ lockPref("browser.fixup.alternate.enabled", false);
 // 1 - Open links, that would normally open in a new window, in the current tab/window
 // 2 - Open links, that would normally open in a new window, in a new window
 // 3 - Open links, that would normally open in a new window, in a new tab in the current window (default)
-// defaultPref("browser.link.open_newwindow", 3);
+// pref("browser.link.open_newwindow", 3);
 
 // http://kb.mozillazine.org/Browser.link.open_newwindow.restriction
 // 0 - Divert all links according to browser.link.open_newwindow
@@ -95,6 +98,20 @@ lockPref("browser.newtabpage.introShown", true);
 // false - The application creates screenshots of visited web pages (default)
 lockPref("browser.pagethumbnails.capturing_disabled", true);
 
+// Disable Firefox Pocket
+// browser.pocket.enabled doesn't fully disable the Pocket integration
+// https://bugzilla.mozilla.org/show_bug.cgi?id=1171569
+lockPref("browser.pocket.api", "");
+lockPref("browser.pocket.enabled", false);
+
+// Disable Firefox Hello
+lockPref("loop.enabled", false);
+lockPref("loop.server", "");
+lockPref("loop.facebook.shareUrl", "");
+// Enable text chat by default
+// https://bugzilla.mozilla.org/show_bug.cgi?id=1171942
+lockPref("loop.textChat.enabled", false);
+
 // http://kb.mozillazine.org/Browser.safebrowsing.enabled
 // http://kb.mozillazine.org/Browser.safebrowsing.malware.enabled
 //  true - Compare visited URLs against a blacklist or submit URLs to a third party
@@ -108,10 +125,18 @@ lockPref("browser.safebrowsing.malware.reportURL", "");
 lockPref("browser.safebrowsing.reportURL", "");
 lockPref("browser.safebrowsing.updateURL", "");
 
+// Disable detection of captive portals
+// https://groups.google.com/d/topic/mozilla.support.firefox/TJgV_uODg_I
+// lockPref("captivedetect.canonicalURL", "");
+
+// Get rid of all things Yahoo
+lockPref("browser.contentHandlers.types.0.uri", "");
+lockPref("gecko.handlerService.schemes.mailto.0.uriTemplate", "");
+
 // http://kb.mozillazine.org/About:config_entries#Browser.
 //  true - Automatically check for updates to search plugins.
 // false - Don't.
-lockPref("browser.search.update", false);
+// lockPref("browser.search.update", false);
 
 // http://kb.mozillazine.org/Browser.send_pings
 //  true - Send a POST request to URI listed in the ping attribute of <a> HTML elements
@@ -138,7 +163,7 @@ defaultPref("browser.startup.page", 3);
 // 1 - Display close buttons on all tabs (default)
 // 2 - Don’t display any close buttons
 // 3 - Display a single close button at the end of the tab strip
-defaultPref("browser.tabs.closeButtons", 3);
+// pref("browser.tabs.closeButtons", 3);
 
 // http://kb.mozillazine.org/About:config_entries#Browser.
 //  true - Open new tabs to the right of the parent tab (default)
@@ -150,18 +175,9 @@ defaultPref("browser.tabs.insertRelatedAfterCurrent", false);
 // false - Links are not underlined by default
 defaultPref("browser.underline_anchors", false);
 
-// http://kb.mozillazine.org/About:config_entries#Browser.
-//  true - The domain name including the top level domain is highlighted in the address
-//         bar by coloring it black and the other parts grey (default)
-// false - All parts of the url are given the same color: black
-lockPref("browser.urlbar.formatting.enabled", false);
-
-// http://kb.mozillazine.org/About:config_entries#Browser.
-//  true - Hide certain parts of the url (default)
-// false - All parts of the url are shown
-lockPref("browser.urlbar.trimURLs", false);
-
-// Disable the new unified URL bar
+// Disable the unified complete URL bar. Note: this pref may get removed soon!
+// Stop bundling the old autocomplete search components in Firefox
+// https://bugzilla.mozilla.org/show_bug.cgi?id=995095
 lockPref("browser.urlbar.unifiedcomplete", false);
 
 // about:healthreport
@@ -177,23 +193,23 @@ lockPref("datareporting.policy.dataSubmissionPolicyAccepted", false);
 lockPref("datareporting.policy.dataSubmissionPolicyBypassAcceptance", false);
 
 // https://developer.mozilla.org/en-US/docs/Mozilla/Preferences/Preference_reference/dom.event.clipboardevents.enabled
-defaultPref("dom.event.clipboardevents", false);
+lockPref("dom.event.clipboardevents.enabled", false);
 
 // http://kb.mozillazine.org/Dom.storage.enabled
 // Note: disabling this will essentially disable in-browser key-value storage
 // and break many websites. Because of that, we'll leave it enabled for now.
-// defaultPref("dom.storage.enabled", false);
+// pref("dom.storage.enabled", false);
 
 // Disable the annoying "...is now in fullscreen" message
 // https://support.mozilla.org/en-US/questions/937742
-defaultPref("full-screen-api.approval-required", false);
+// pref("full-screen-api.approval-required", false);
 
 // Gecko user agent string reference
 // https://developer.mozilla.org/en-US/docs/Web/HTTP/Gecko_user_agent_string_reference
 // https://panopticlick.eff.org/
 //
-// defaultPref("general.useragent.override", "Mozilla/5.0 (Macintosh; Intel Mac OS X 10.7; rv:23.0) Gecko/20100101 Firefox/23.0");
-// defaultPref("general.useragent.override", "Mozilla/5.0 (X11; Linux x86_64; rv:30.0) Gecko/20100101 Firefox/30.0");
+// pref("general.useragent.override", "Mozilla/5.0 (Macintosh; Intel Mac OS X 10.7; rv:23.0) Gecko/20100101 Firefox/23.0");
+// pref("general.useragent.override", "Mozilla/5.0 (X11; Linux x86_64; rv:30.0) Gecko/20100101 Firefox/30.0");
 
 // Disable Location-Aware Browsing
 // https://www.mozilla.org/en-US/firefox/geolocation/
@@ -216,30 +232,30 @@ lockPref("layout.css.visited_links_enabled", false);
 // 0 - Disable spellchecker
 // 1 - Enable spellchecker for multi-line controls (default)
 // 2 - Enable spellchecker for multi-line controls and single-line controls
-defaultPref("layout.spellcheckDefault", 0);
+// pref("layout.spellcheckDefault", 0);
 
 // http://kb.mozillazine.org/Layout.word_select.stop_at_punctuation
 //  true - "Word" selection includes surrounding punctuation and only stops at whitespace, so
 //         that for example double-clicking example.com/the/path and the other above-mentioned
 //         shortcuts select the entire URL
 // false - Word selection using the above mentioned shortcuts ends at punctuation characters
-defaultPref("layout.word_select.stop_at_punctuation", true);
+// ## pref("layout.word_select.stop_at_punctuation", true);
 
 // Test HTML5 videos on YouTube, on a Nightly version of Firefox
 // https://oneanddone.mozilla.org/en-US/tasks/89/
-defaultPref("media.fragmented-mp4.enabled", true);
-defaultPref("media.fragmented-mp4.exposed", true);
-defaultPref("media.fragmented-mp4.ffmpeg.enabled", true);
-defaultPref("media.fragmented-mp4.gmp.enabled", true);
-defaultPref("media.mediasource.enabled", true);
-defaultPref("media.mediasource.mp4.enabled", true);
-defaultPref("media.mediasource.webm.enabled", true);
+// ## pref("media.fragmented-mp4.enabled", true);
+// ## pref("media.fragmented-mp4.exposed", true);
+// ## pref("media.fragmented-mp4.ffmpeg.enabled", true);
+// ## pref("media.fragmented-mp4.gmp.enabled", true);
+// ## pref("media.mediasource.enabled", true);
+// ## pref("media.mediasource.mp4.enabled", true);
+// ## pref("media.mediasource.webm.enabled", true);
 
 // How to protect yourself from exposing your IP with WebRTC.
 // https://mullvad.net/en/webrtc/
 // Note: disabling this will essentially disable WebRTC and
 // we'll leave it enabled for now.
-// defaultPref("media.peerconnection.enabled", false);
+// pref("media.peerconnection.enabled", false);
 
 // http://kb.mozillazine.org/Network.cookie.cookieBehavior
 // 0 - All cookies are allowed (default)
@@ -247,11 +263,12 @@ defaultPref("media.mediasource.webm.enabled", true);
 // 2 - No cookies are allowed
 // 3 - Third-party cookies are allowed only if that site has stored cookies
 //     already from a previous visit 
-defaultPref("network.cookie.cookieBehavior", 1);
+// ## pref("network.cookie.cookieBehavior", 1);
 
 // http://kb.mozillazine.org/Network.cookie.lifetime.days
 // Number of days to keep cookies (default: 90)
-defaultPref("network.cookie.lifetime.days", 1);
+// ## pref("network.cookie.lifetime.days", 1);
+
 
 // http://kb.mozillazine.org/Network.cookie.lifetimePolicy
 // 0 - The cookie's lifetime is supplied by the server (default)
@@ -334,8 +351,8 @@ lockPref("network.proxy.socks_remote_dns", true);
 // A comma delimited list of port numbers to additionally block / allow
 // default: A general port blacklist. Connections to these ports will not be allowed unless the protocol overrides.
 //          https://hg.mozilla.org/mozilla-central/file/tip/netwerk/base/nsIOService.cpp#l75
-// defaultPref("network.security.ports.banned", "21,80");
-// defaultPref("network.security.ports.banned.override", "8080,8443");
+// pref("network.security.ports.banned", "21,80");
+// pref("network.security.ports.banned.override", "8080,8443");
 
 // http://kb.mozillazine.org/Issues_related_to_plugins
 defaultPref("plugins.click_to_play", true);
@@ -345,7 +362,7 @@ defaultPref("plugins.click_to_play", true);
 // 2 - always activate (default)
 defaultPref("plugin.state.flash", 1);
 
-// Clear on shutdown
+// Clear some history objects on shutdown
 lockPref("privacy.clearOnShutdown.cache", true);
 lockPref("privacy.clearOnShutdown.cookies", true);
 lockPref("privacy.clearOnShutdown.downloads", true);
@@ -357,7 +374,7 @@ lockPref("privacy.clearOnShutdown.sessions", true);
 lockPref("privacy.sanitize.sanitizeOnShutdown", true);
 defaultPref("privacy.clearOnShutdown.siteSettings", false);
 
-// Clear on demand
+// Clear some history objects on demand
 lockPref("privacy.cpd.cache", true);
 lockPref("privacy.cpd.cookies", true);
 lockPref("privacy.cpd.downloads", true);
@@ -382,6 +399,9 @@ lockPref("privacy.donottrackheader.enabled", true);
 // 1 - A header stating the request not to be tracked is sent (default)
 lockPref("privacy.donottrackheader.value", 1);
 
+// https://wiki.mozilla.org/Security/Tracking_protection
+lockPref("privacy.trackingprotection.enabled", true);
+
 // Bug #873349 / "Add a whitelist for mixed content blocking" was closed with
 // WONTFIX. However, we still may be able to allow mixed content, especially
 // in coroprate environments. Default is "true" and we leave it that way.
@@ -390,10 +410,11 @@ defaultPref("security.mixed_content.block_active_content", true);
 
 // Disable weak DHE export ciphers
 // https://weakdh.org/sysadmin.html
-defaultPref("security.ssl3.dhe_rsa_aes_128_sha", false)
-defaultPref("security.ssl3.dhe_rsa_aes_256_sha", false)
+// pref("security.ssl3.dhe_rsa_aes_128_sha", false)
+// pref("security.ssl3.dhe_rsa_aes_256_sha", false)
 
-// Add a pref to disable SSL Session cache (Disable sending session IDs and sending session tickets)
+// Add a pref to disable SSL Session cache (Disable sending session IDs and
+// sending session tickets)
 // https://bugzilla.mozilla.org/show_bug.cgi?id=967977
 defaultPref("security.ssl.disable_session_identifiers", true);
 
@@ -402,10 +423,13 @@ defaultPref("security.ssl.disable_session_identifiers", true);
 // 1 - TLS 1.0 is the minimum required / maximum supported encryption protocol.
 // 2 - TLS 1.1 is the minimum required / maximum supported encryption protocol.
 // 3 - TLS 1.2 is the minimum required / maximum supported encryption protocol.
-defaultPref("security.tls.version.min", 1)
-defaultPref("security.tls.version.max", 3)
+// pref("security.tls.version.min", 2)
+// pref("security.tls.version.max", 3)
 
+// Stay Social with Firefox
 // https://blog.mozilla.org/blog/2013/05/14/stay-social-with-firefox/
+//
+// How do I get rid of unwanted social API in Firefox?
 // https://support.mozilla.org/en-US/questions/942293
 lockPref("social.directories", "");
 lockPref("social.enabled", false);
@@ -419,6 +443,8 @@ lockPref("social.shareDirectory", "");
 lockPref("social.toast-notifications.enabled", false);
 lockPref("social.whitelist", "");
 
+// How can I disable the "Improve Firefox" suggestion which appeared after FF8 update?
+// No any choise helps to avoid the popup appearance next time
 // http://support.mozilla.org/en-US/questions/898549
 lockPref("toolkit.telemetry.enabled", false);
 lockPref("toolkit.telemetry.prompted", 2);
@@ -439,5 +465,16 @@ lockPref("toolkit.telemetry.rejected", true);
 // http://kb.mozillazine.org/About:config_entries#UI.
 //
 lockPref("ui.key.menuAccessKeyFocuses", false);
+
+// http://kb.mozillazine.org/About:config_entries#Browser.
+//  true - The domain name including the top level domain is highlighted in the address
+//         bar by coloring it black and the other parts grey (default)
+// false - All parts of the url are given the same color: black
+lockPref("browser.urlbar.formatting.enabled", false);
+
+// http://kb.mozillazine.org/About:config_entries#Browser.
+//  true - Hide certain parts of the url (default)
+// false - All parts of the url are shown
+lockPref("browser.urlbar.trimURLs", false);
 
 // END
