Forgotten fixes to mozilla/mozilla.cfg
Signed-off-by: Christian Kujau <lists@nerdbynature.de>

--- a/mozilla/mozilla.cfg
+++ b/mozilla/mozilla.cfg
@@ -1,5 +1,5 @@
 //
-// firefox.cfg
+// mozilla.cfg
 //
 
 //
@@ -141,11 +141,11 @@ lockPref("gecko.handlerService.schemes.mailto.0.uriTemplate", "");
 // http://kb.mozillazine.org/Browser.send_pings
 //  true - Send a POST request to URI listed in the ping attribute of <a> HTML elements
 // false - ignore the ping attribute (default)
-defaultPref("browser.send_pings", false);
+lockPref("browser.send_pings", false);
 
 // https://bugzilla.mozilla.org/show_bug.cgi?id=648683
 // Expose tabs on-demand preference
-defaultPref("browser.sessionstore.restore_on_demand", true);
+lockPref("browser.sessionstore.restore_on_demand", true);
 
 // http://kb.mozillazine.org/Browser.startup.homepage
 lockPref("browser.startup.homepage", "about:");
@@ -155,7 +155,7 @@ lockPref("browser.startup.homepage", "about:");
 // 1 - Start with browser.startup.homepage (default)
 // 2 - Load the last visited page
 // 3 - Resume the previous browser session
-defaultPref("browser.startup.page", 3);
+lockPref("browser.startup.page", 3);
 
 // http://kb.mozillazine.org/Browser.tabs.closeButtons
 // Note: this has been removed in Firefox 31
@@ -239,17 +239,17 @@ lockPref("layout.css.visited_links_enabled", false);
 //         that for example double-clicking example.com/the/path and the other above-mentioned
 //         shortcuts select the entire URL
 // false - Word selection using the above mentioned shortcuts ends at punctuation characters
-// ## pref("layout.word_select.stop_at_punctuation", true);
+lockPref("layout.word_select.stop_at_punctuation", false);
 
 // Test HTML5 videos on YouTube, on a Nightly version of Firefox
 // https://oneanddone.mozilla.org/en-US/tasks/89/
-// ## pref("media.fragmented-mp4.enabled", true);
-// ## pref("media.fragmented-mp4.exposed", true);
-// ## pref("media.fragmented-mp4.ffmpeg.enabled", true);
-// ## pref("media.fragmented-mp4.gmp.enabled", true);
-// ## pref("media.mediasource.enabled", true);
-// ## pref("media.mediasource.mp4.enabled", true);
-// ## pref("media.mediasource.webm.enabled", true);
+// pref("media.fragmented-mp4.enabled", true);
+// pref("media.fragmented-mp4.exposed", true);
+// pref("media.fragmented-mp4.ffmpeg.enabled", true);
+// pref("media.fragmented-mp4.gmp.enabled", true);
+// pref("media.mediasource.enabled", true);
+// pref("media.mediasource.mp4.enabled", true);
+// pref("media.mediasource.webm.enabled", true);
 
 // How to protect yourself from exposing your IP with WebRTC.
 // https://mullvad.net/en/webrtc/
@@ -263,19 +263,18 @@ lockPref("layout.css.visited_links_enabled", false);
 // 2 - No cookies are allowed
 // 3 - Third-party cookies are allowed only if that site has stored cookies
 //     already from a previous visit 
-// ## pref("network.cookie.cookieBehavior", 1);
+pref("network.cookie.cookieBehavior", 1);
 
 // http://kb.mozillazine.org/Network.cookie.lifetime.days
 // Number of days to keep cookies (default: 90)
-// ## pref("network.cookie.lifetime.days", 1);
-
+pref("network.cookie.lifetime.days", 1);
 
 // http://kb.mozillazine.org/Network.cookie.lifetimePolicy
 // 0 - The cookie's lifetime is supplied by the server (default)
 // 1 - The user is prompted for the cookie's lifetime
 // 2 - The cookie expires at the end of the session (when the browser closes)
 // 3 - The cookie lasts for the number of days specified by network.cookie.lifetime.days
-lockPref("network.cookie.lifetimePolicy", 3);
+pref("network.cookie.lifetimePolicy", 3);
 
 // http://kb.mozillazine.org/Network.dns.disablePrefetch
 // https://trac.torproject.org/projects/tor/wiki/doc/Preventing_Tor_DNS_Leaks
