* Disable spell checking (but don't lock it) * Don't lock layout.word_select.stop_at_punctuation * Add help text to autoconfig.js
Signed-off-by: Christian Kujau <lists@nerdbynature.de>

--- a/mozilla/mozilla.cfg
+++ b/mozilla/mozilla.cfg
@@ -2,12 +2,6 @@
 // mozilla.cfg
 //
 
-//
-// TODO:
-// * (Regularly) re-evaluate settings: are they still relevant and supported?
-// * Add more settings for better privacy-minded defaults
-//
-
 // http://kb.mozillazine.org/App.update.auto
 //  true - Download and install updates automatically (default)
 // false - Ask the user what he wants to do when an update is available 
@@ -232,14 +226,14 @@ lockPref("layout.css.visited_links_enabled", false);
 // 0 - Disable spellchecker
 // 1 - Enable spellchecker for multi-line controls (default)
 // 2 - Enable spellchecker for multi-line controls and single-line controls
-// pref("layout.spellcheckDefault", 0);
+pref("layout.spellcheckDefault", 0);
 
 // http://kb.mozillazine.org/Layout.word_select.stop_at_punctuation
 //  true - "Word" selection includes surrounding punctuation and only stops at whitespace, so
 //         that for example double-clicking example.com/the/path and the other above-mentioned
 //         shortcuts select the entire URL
 // false - Word selection using the above mentioned shortcuts ends at punctuation characters
-lockPref("layout.word_select.stop_at_punctuation", false);
+pref("layout.word_select.stop_at_punctuation", false);
 
 // Test HTML5 videos on YouTube, on a Nightly version of Firefox
 // https://oneanddone.mozilla.org/en-US/tasks/89/
