Copyleft information updated
Signed-off-by: Christian Kujau <lists@nerdbynature.de>

--- a/benchmarks/fs-bench.conf
+++ b/benchmarks/fs-bench.conf
@@ -1,5 +1,5 @@
 #
-# (c) 2009-2011 Christian Kujau <lists@nerdbynature.de>
+# (c)2009 Christian Kujau <lists@nerdbynature.de>
 #
 # fs-bench.conf, to be used by fs-bench.sh
 #
