--- a/mozilla/mozilla.cfg
+++ b/mozilla/mozilla.cfg
@@ -459,6 +459,10 @@ lockPref("toolkit.telemetry.rejected", true);
 //
 lockPref("ui.key.menuAccessKeyFocuses", false);
 
+// No More Passwords over HTTP, Please!
+// https://blog.mozilla.org/tanvi/2016/01/28/no-more-passwords-over-http-please/
+// defaultPref("security.insecure_password.ui.enabled", true);
+
 // http://kb.mozillazine.org/About:config_entries#Browser.
 //  true - The domain name including the top level domain is highlighted in the address
 //         bar by coloring it black and the other parts grey (default)
