Forgot about security.insecure_field_warning.contextual.enabled
Signed-off-by: Christian Kujau <lists@nerdbynature.de>

--- a/mozilla/mozilla.cfg
+++ b/mozilla/mozilla.cfg
@@ -462,6 +462,7 @@ lockPref("ui.key.menuAccessKeyFocuses", false);
 // No More Passwords over HTTP, Please!
 // https://blog.mozilla.org/tanvi/2016/01/28/no-more-passwords-over-http-please/
 // defaultPref("security.insecure_password.ui.enabled", true);
+// defaultPref("security.insecure_field_warning.contextual.enabled", true);
 
 // http://kb.mozillazine.org/About:config_entries#Browser.
 //  true - The domain name including the top level domain is highlighted in the address
