Add media.autoplay.enabled default
Signed-off-by: Christian Kujau <lists@nerdbynature.de>

--- a/mozilla/mozilla.cfg
+++ b/mozilla/mozilla.cfg
@@ -350,6 +350,9 @@ lockPref("network.proxy.socks_remote_dns", true);
 // http://kb.mozillazine.org/Issues_related_to_plugins
 defaultPref("plugins.click_to_play", true);
 
+// Disable HTML5 autoplay
+defaultPref("media.autoplay.enabled", false);
+
 // 0 - never activate
 // 1 - ask to activate
 // 2 - always activate (default)
