Add note to media.autoplay.enabled - sometimes we need this to be enabled.
Signed-off-by: Christian Kujau <lists@nerdbynature.de>

--- a/mozilla/mozilla.cfg
+++ b/mozilla/mozilla.cfg
@@ -351,6 +351,8 @@ lockPref("network.proxy.socks_remote_dns", true);
 defaultPref("plugins.click_to_play", true);
 
 // Disable HTML5 autoplay
+// Note: this needs to be set to TRUE if we want media to be autoplayed. Think
+// about custom Greasemonkey scripts that want to notify us with play().
 defaultPref("media.autoplay.enabled", false);
 
 // 0 - never activate
